2009-10-26  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Use -webkit-background-size as the transition property in this test now
        that it is distinct from background-size.

        * transitions/multiple-background-size-transitions.html:

2009-10-26  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Beth Dakin.

        Update expedted results after r50108.

        * svg/css/getComputedStyle-basic-expected.txt:

2009-10-26  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/7308952> and http://webkit.org/b/30424 - REGRESSION (r48687): Pages on ucas.com appear blank.

        * fast/loader/history-forward-in-head-expected.txt: Added.
        * fast/loader/history-forward-in-head.html: Added.

2009-10-26  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30049
        <rdar://problem/7286002> Manipulating DOM from a script while parsing XHTML can cause a crash

        * fast/parser/remove-current-node-parent-x-2-expected.txt: Added.
        * fast/parser/remove-current-node-parent-x-2.xhtml: Added.
        * fast/parser/remove-current-node-parent-x-expected.txt: Added.
        * fast/parser/remove-current-node-parent-x.xhtml: Added.

2009-10-26  Dan Bernstein  <mitz@apple.com>

        Reviewed by Beth Dakin.

        background-size: X treated as background-size: X X, not background-size: X auto
        https://bugs.webkit.org/show_bug.cgi?id=28440

        * fast/backgrounds/size/parsing-background-size-values-expected.txt:
        * fast/backgrounds/size/parsing-inherit-expected.txt:
        * fast/backgrounds/size/resources/parsing-background-size-values.js:
        (test):
        * fast/backgrounds/size/resources/parsing-inherit.js:
        * platform/mac/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
