@@ -1,0 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Refresh" content="0;url=notify-done.html">
+</head>
+<body>
+This frame does a meta-redirect to a an empty page that performs a notify done.<br>
+If things are working correctly, you shouldn't see this text in the test results.
+</body>
+</html>
