@@ -1,0 +1,6 @@
+<html>
+<body>
+This is the parent of a frame that redirects itself.<br>
+<iframe src="meta-redirect-to-notify-done.html"></iframe>
+</body>
+</html>
